# gl-snippets

./: README.md
basic-win32/: CMakeLists.txt  files.cmake  log.h  program.cpp  shader.h
